objects/MedProSC__MedProHCP__c.object
<CustomObject>
    <description>A pre-configured sync point (custom object) where users of the MedPro Search Connector can save &quot;Search MedPro&quot; results to</description>
    <fields>
        <fullName>MedProSC__AddressLine1__c</fullName>
        <description>State provided address of the practitioner</description>
        <label>Address Line 1</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__AddressLine2__c</fullName>
        <description>Continuation of State provided address</description>
        <label>Address Line2</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__CDS_Number__c</fullName>
        <label>CDS Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__City__c</fullName>
        <description>State provided address city</description>
        <label>City</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__ClientID__c</fullName>
        <label>ClientID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__DEA_Number__c</fullName>
        <label>DEA Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Designation__c</fullName>
        <description>The current designation that is listed in MedProID®</description>
        <label>Designation</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Do_Not_Allow_Service_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Allow Service Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__FirstName__c</fullName>
        <description>Practitioner first name</description>
        <label>First Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__LastName__c</fullName>
        <description>Practitioner last name</description>
        <label>Last Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__MedProID__c</fullName>
        <description>The MedProID for the SLN record or NPI if no SLN is available</description>
        <label>MedPro ID</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MedProSC__MedPro_LastUpdatedTS__c</fullName>
        <description>The date and time of the last update which MedPro sourced data was applied to this object&apos;s custom fields</description>
        <label>MedPro Last Updated TS</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MedProSC__MiddleName__c</fullName>
        <description>Practitioner middle name</description>
        <label>Middle Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__NPINumber__c</fullName>
        <description>The current NPI number if it is available in MedProID®</description>
        <label>NPI Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__StateLicenseNumber__c</fullName>
        <description>The current State License number if it is available in MedProID®</description>
        <label>State License Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__StateOfLicense__c</fullName>
        <description>The State of License that is listed in MedProID®</description>
        <label>State Of License</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__StateSpecificID__c</fullName>
        <description>The current State Specific License in MedProID® for a practitioner if the data is available</description>
        <label>State Specific ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__State__c</fullName>
        <description>State provided address state</description>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Suffix__c</fullName>
        <description>Practitioner Suffix</description>
        <label>Suffix</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__TaxonomyDescription__c</fullName>
        <description>The current primary taxonomy that is listed in MedProID® for a practitioner</description>
        <label>Taxonomy Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MedProSC__Taxonomy_Code__c</fullName>
        <description>The Primary Taxonomy Code that is listed in MedProID® for a practitioner</description>
        <label>Taxonomy Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Title__c</fullName>
        <description>Name prefix of Mr., Mrs., Miss., Ms, or other.</description>
        <label>Title</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Transaction_ID__c</fullName>
        <description>MedPro generated transaction id which will tie an original &quot;list&quot; request to an eventual &quot;detail&quot; request. This value is required to be passed back in the &quot;detail&quot; request.</description>
        <label>Transaction ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__ZipCode__c</fullName>
        <description>State provided address zip code</description>
        <label>Zip Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__adj_state_lic_exp_date__c</fullName>
        <label>Adjusted State License Expiration Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__customer_state_grace_period__c</fullName>
        <label>Customer State Grace Period</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__samp_desig_status__c</fullName>
        <label>Sampleability Desig. Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__samp_fed_sanctions__c</fullName>
        <label>Sampleability Fed. Sanctions</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__samp_last_received__c</fullName>
        <label>Sampleability Last Received</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__samp_license_status__c</fullName>
        <label>Sampleability License Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__samp_overall__c</fullName>
        <label>Sampleability Overall</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__sampleability_exp_overall__c</fullName>
        <label>Sampleability Exp. Overall</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__state_grace_period__c</fullName>
        <label>State Grace Period</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>MedPro HCP</label>
    <nameField>
        <displayFormat>MPR-{00000000}</displayFormat>
        <label>MedProHCP Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MedPro HCPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>